# cxxforth

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  UNLICENSE.txt  cpp2md.cpp  cpp2md.cpp.md  cpp2md.fs  cxxforth  cxxforth.c  cxxforth.cpp  cxxforth.cpp.md  cxxforth.h  cxxforth.md  cxxforthconfig.h.in  forth.cpp  forth.h  forth.hpp  forthconfig.h.in
cmake_modules/: FindReadline.cmake
tests/: hello.fs  test-accept.fs
xcode/cxxforth.xcodeproj/: project.pbxproj
xcode/cxxforth.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/cxxforth.xcodeproj/xcshareddata/xcschemes/: cxxforth.xcscheme
